-Removing the update button for the index panel - Added a label

--- a/NAPS2.Core/WinForms/FDesktop.fr.resx
+++ b/NAPS2.Core/WinForms/FDesktop.fr.resx
@@ -447,4 +447,7 @@
   <data name="TSMI_RemoveAll.Text" xml:space="preserve">
     <value>Enlever tous les séparateurs</value>
   </data>
+  <data name="TS_Index.Text" xml:space="preserve">
+    <value>Indexation</value>
+  </data>
 </root>
