WIP: Try to accomodate 2 images on the preview

--- a/NAPS2.Core/WinForms/TiffViewer.resx
+++ b/NAPS2.Core/WinForms/TiffViewer.resx
@@ -144,6 +144,21 @@
   <data name="&gt;&gt;pbox.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="pbox2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="pbox2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 50</value>
+  </data>
+  <data name="pbox2.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;pbox2.Name" xml:space="preserve">
+    <value>pbox2</value>
+  </data>
+  <data name="&gt;&gt;pbox2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
